[gd_scene load_steps=3 format=3 uid="uid://cg6yxvevcv3w8"]

[ext_resource type="Script" path="res://addons/radiogodot/radio_root.gd" id="1_r5vj4"]
[ext_resource type="AudioStream" uid="uid://c7y2pfblt5r2g" path="res://sumoJugleTest1.wav" id="1_wayw0"]

[node name="RadioGodot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r5vj4")

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_wayw0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button4" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Previous"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Play"

[node name="Button5" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Play"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Pause"

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Next"

[node name="ProgScrubber" type="HSlider" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0
editable = false

[node name="Volume" type="HSlider" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
min_value = -80.0
max_value = 2.08165e-12

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button5" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
